[package]
name = "forgelsp"
description = "Language Server Protocol implementation for Solidity"
version = "0.1.0"
edition = "2024"

[dependencies]
# foundry
foundry-compilers = "0.18.0"

# lsp
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-lsp = "0.20.0"
jsonc-parser = "0.26.3"

# tracing
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.38", default-features = false }
anyhow = "1.0.98"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "lsp"
path = "src/lsp.rs"
